--- a/views/chat.pug
+++ b/views/chat.pug
@@ -6,7 +6,7 @@ html
 		link(rel="stylesheet",href="css/chat.css")
 
 		meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no")
-		title Chat page
+		title chatie
 
 	body
 		#app
