--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -24,6 +24,11 @@ body {
 	overflow: hidden;
 }
 
+@media only screen and (max-width: 800px) {
+	.columns {
+		height: calc(100vh - 3.5em);
+	}
+}
 
 .flex1 {
 	flex:1;
