--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -10,11 +10,8 @@
 
 
 body {
-	display:flex;
-	flex-direction:column;
-	justify-content: stretch;
 	height: 100vh;
-	overflow-y: hidden;
+	width: 100%;
 	background: var(--background);
 	overscroll-behavior: contain;
 }
@@ -22,13 +19,15 @@ body {
 .columns {
 	display: flex;
 	max-width: 100vw;
+	width: 100%;
+	height: 100%;
 	overflow: hidden;
 }
 
 @media only screen and (max-width: 800px) {
-	.columns {
-		height: calc(100vh - 3.5em);
-	}
+	/* .columns { */
+	/* 	height: calc(100vh - 3.5em); */
+	/* } */
 }
 
 .flex1 {
